--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,7 @@
       const log = console.log;
       const clear = console.clear;
     </script>
+    <script src="../utils.js"></script>
   </head>
   <body>
     <div>
